syntax = "proto3";
package gameEngine;

message InitBoardReq
{
	repeated int32 board = 1;
}