syntax = "proto3";
package GameEngine;

message InitBoardResp
{
	int32 size = 1;
	repeated int32 fieldValues = 2;
}